code/nextjs-app-k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextjs-app
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: nextjs-app
