code/nextjs-app-k8s-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
  name: nextjs-app
  namespace: default
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: nextjs-app
            port:
              number: 80
        path: /
        pathType: Exact
